--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-# Compiled class file
+# Diretórios de build
+/bin/
+/target/
+/out/
+/build/
+
+# IDEs
+.vscode/
+*.iml
+.idea/
 *.class
 
-# Log file
+# Logs
 *.log
 
-# BlueJ files
-*.ctxt
+# Arquivos temporários
+*.tmp
+*.bak
+*.swp
+*~
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Arquivos do sistema
+.DS_Store
+Thumbs.db
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Maven
+.mvn/
+!**/src/main/**
+!**/src/test/**
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Gradle
+.gradle/
+build/
+!gradle-wrapper.jar
+
+# Eclipse
+.project
+.classpath
+.settings/
